@@ -52,7 +52,7 @@ CPathWatcher::CPathWatcher(void) : m_hCompPort(NULL)
 
 CPathWatcher::~CPathWatcher(void)
 {
-    InterlockedExchange(&m_bRunning, FALSE);
+    Stop();
     m_hThread.CloseHandle();
     AutoLocker lock(m_critSec);
     ClearInfoMap();
