@@ -69,6 +69,8 @@ Version 1.7.7
        terminating thread. (Stefan)
 - BUG: Issue #269: Crash if GdiPlus is
        not initialized. (Stefan)
+- BUG: Issue #270: Exception when quitting
+       the log dialog. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
